# nixos-config

./: .gitignore  configuration.nix  flake.nix  lib.nix  mudaebot.patch  tuigreet.nix  zacharie.nix
_legacy/: a.patch  configuration.nix
_legacy/hyprland/: system.nix  user.nix
config/: darkman.nix  globals.nix  greetd.nix  kitty.nix  mangohud.nix  nh.nix  pam.nix  printing.nix  rofi.nix  services.nix  sublime-merge.nix  sunsetr.nix  swaylock.nix  swaync.nix  wayland-pipewire-idle-inhibit.nix  wleave.nix  workarounds.nix
config/desktop/: cursor.nix  fonts.nix  gamemode.nix  gtk.nix  kde.nix  mangohud.nix  portals.nix  qt.nix  rofi.nix  services.nix  wleave.nix
config/desktop/quickshell/rust/: CMakeLists.txt  Cargo.toml  build.rs  default.nix  qt-plugin.version
config/desktop/quickshell/rust/src/clipboard/: mod.rs  wayland.rs
config/gui/: qt.nix  (+11 more)
configuration/: globals.nix  hyprpaper.nix  swayidle.nix  swaylock.nix  wlsunset.nix
fullmanager/: default.nix  types.nix
generator/: default.nix  eww.nix  hyprpaper.nix  swayidle.nix  swaylock.nix  utils.nix  wlogout.nix  wlsunset.nix
hyprland/: system.nix  user.nix
legacy/: configuration.nix  zacharie.nix
modules/: darkman.nix  discord.nix  git.nix  home.nix  kitty.nix  lib.nix  mangohud.nix  nh.nix  pam.nix  rofi.nix  sublime-merge.nix  sublime-text.nix  sunsetr.nix  swaylock.nix  swaync.nix  wayland-pipewire-idle-inhibit.nix  wlogout.nix  xdg.nix
new/: default.nix
options/: greetd.nix  lib.nix  pam.nix  xdg.nix
secrets/: default.nix  keys.nix  password-zacharie.age  secrets.nix
targets/: root@.nix  zacharie@alpha.nix
users/: root.nix
(+217 files in other folders)
